cmake_minimum_required(VERSION 3.16)
project(S1U VERSION 1.0.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -march=native -mtune=native -flto -fomit-frame-pointer")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g -O0")

find_package(PkgConfig REQUIRED)
find_package(Threads REQUIRED)

pkg_check_modules(DRM REQUIRED libdrm)
pkg_check_modules(GBM REQUIRED gbm)
pkg_check_modules(EGL REQUIRED egl)
pkg_check_modules(GLES2 REQUIRED glesv2)
pkg_check_modules(INPUT REQUIRED libinput)
pkg_check_modules(UDEV REQUIRED libudev)
pkg_check_modules(CAIRO REQUIRED cairo)
pkg_check_modules(PANGO REQUIRED pango pangoft2)

include_directories(${CMAKE_SOURCE_DIR}/include)
include_directories(${DRM_INCLUDE_DIRS})
include_directories(${GBM_INCLUDE_DIRS})
include_directories(${EGL_INCLUDE_DIRS})
include_directories(${GLES2_INCLUDE_DIRS})
include_directories(${INPUT_INCLUDE_DIRS})
include_directories(${UDEV_INCLUDE_DIRS})
include_directories(${CAIRO_INCLUDE_DIRS})
include_directories(${PANGO_INCLUDE_DIRS})

link_directories(${DRM_LIBRARY_DIRS})
link_directories(${GBM_LIBRARY_DIRS})
link_directories(${EGL_LIBRARY_DIRS})
link_directories(${GLES2_LIBRARY_DIRS})
link_directories(${INPUT_LIBRARY_DIRS})
link_directories(${UDEV_LIBRARY_DIRS})
link_directories(${CAIRO_LIBRARY_DIRS})
link_directories(${PANGO_LIBRARY_DIRS})

add_subdirectory(src)
add_subdirectory(drivers)
add_subdirectory(protocol)
add_subdirectory(tools)
