set(DRIVER_SOURCES
    drm_driver.cpp
    gbm_driver.cpp
    egl_driver.cpp
    gl_driver.cpp
    vulkan_driver.cpp
    input_driver.cpp
    audio_driver.cpp
    network_driver.cpp
    storage_driver.cpp
    power_driver.cpp
    thermal_driver.cpp
    sensor_driver.cpp
    camera_driver.cpp
    usb_driver.cpp
    pci_driver.cpp
    i2c_driver.cpp
    spi_driver.cpp
    uart_driver.cpp
    gpio_driver.cpp
    pwm_driver.cpp
    adc_driver.cpp
    dac_driver.cpp
    timer_driver.cpp
    watchdog_driver.cpp
    rtc_driver.cpp
    nvme_driver.cpp
    sata_driver.cpp
    scsi_driver.cpp
    raid_driver.cpp
    lvm_driver.cpp
    btrfs_driver.cpp
    ext4_driver.cpp
    xfs_driver.cpp
    zfs_driver.cpp
    nfs_driver.cpp
    smb_driver.cpp
    iscsi_driver.cpp
    fc_driver.cpp
    infiniband_driver.cpp
    ethernet_driver.cpp
    wifi_driver.cpp
    bluetooth_driver.cpp
    cellular_driver.cpp
    satellite_driver.cpp
    fiber_driver.cpp
    coax_driver.cpp
    powerline_driver.cpp
    mesh_driver.cpp
    adhoc_driver.cpp
    infrastructure_driver.cpp
    bridge_driver.cpp
    router_driver.cpp
    switch_driver.cpp
    hub_driver.cpp
    repeater_driver.cpp
    amplifier_driver.cpp
    filter_driver.cpp
    mixer_driver.cpp
    equalizer_driver.cpp
    compressor_driver.cpp
    limiter_driver.cpp
    gate_driver.cpp
    reverb_driver.cpp
    delay_driver.cpp
    chorus_driver.cpp
    flanger_driver.cpp
    phaser_driver.cpp
    tremolo_driver.cpp
    vibrato_driver.cpp
    ring_modulator_driver.cpp
    bit_crusher_driver.cpp
    wave_shaper_driver.cpp
    distortion_driver.cpp
    overdrive_driver.cpp
    fuzz_driver.cpp
    wah_driver.cpp
    auto_wah_driver.cpp
    envelope_follower_driver.cpp
    lfo_driver.cpp
    step_sequencer_driver.cpp
    arpeggiator_driver.cpp
    chord_generator_driver.cpp
    scale_generator_driver.cpp
    key_tracker_driver.cpp
    velocity_tracker_driver.cpp
    pressure_tracker_driver.cpp
    aftertouch_tracker_driver.cpp
    pitch_bend_tracker_driver.cpp
    modulation_tracker_driver.cpp
    expression_tracker_driver.cpp
    sustain_tracker_driver.cpp
    sostenuto_tracker_driver.cpp
    soft_tracker_driver.cpp
    portamento_tracker_driver.cpp
    legato_tracker_driver.cpp
    staccato_tracker_driver.cpp
    tenuto_tracker_driver.cpp
    marcato_tracker_driver.cpp
    accent_tracker_driver.cpp
    ghost_tracker_driver.cpp
    grace_tracker_driver.cpp
    trill_tracker_driver.cpp
    tremolo_tracker_driver.cpp
    vibrato_tracker_driver.cpp
    glissando_tracker_driver.cpp
    slide_tracker_driver.cpp
    bend_tracker_driver.cpp
    hammer_on_tracker_driver.cpp
    pull_off_tracker_driver.cpp
    tap_tracker_driver.cpp
    harmonic_tracker_driver.cpp
    pinch_harmonic_tracker_driver.cpp
    natural_harmonic_tracker_driver.cpp
    artificial_harmonic_tracker_driver.cpp
    palm_mute_tracker_driver.cpp
    muting_tracker_driver.cpp
    choking_tracker_driver.cpp
    scratching_tracker_driver.cpp
    crossfading_tracker_driver.cpp
    beat_matching_tracker_driver.cpp
    tempo_sync_tracker_driver.cpp
    quantization_tracker_driver.cpp
    swing_tracker_driver.cpp
    groove_tracker_driver.cpp
    humanization_tracker_driver.cpp
    randomization_tracker_driver.cpp
    automation_tracker_driver.cpp
    macro_tracker_driver.cpp
    preset_tracker_driver.cpp
    scene_tracker_driver.cpp
    bank_tracker_driver.cpp
    program_tracker_driver.cpp
    channel_tracker_driver.cpp
    midi_tracker_driver.cpp
    osc_tracker_driver.cpp
    cv_tracker_driver.cpp
    gate_tracker_driver.cpp
    trigger_tracker_driver.cpp
    clock_tracker_driver.cpp
    reset_tracker_driver.cpp
    sync_tracker_driver.cpp
    start_tracker_driver.cpp
    stop_tracker_driver.cpp
    continue_tracker_driver.cpp
    song_select_tracker_driver.cpp
    tune_request_tracker_driver.cpp
    active_sensing_tracker_driver.cpp
    system_reset_tracker_driver.cpp
    all_sound_off_tracker_driver.cpp
    all_notes_off_tracker_driver.cpp
    omni_mode_off_tracker_driver.cpp
    omni_mode_on_tracker_driver.cpp
    mono_mode_on_tracker_driver.cpp
    poly_mode_on_tracker_driver.cpp
    local_control_off_tracker_driver.cpp
    local_control_on_tracker_driver.cpp
    all_controllers_off_tracker_driver.cpp
    damper_pedal_tracker_driver.cpp
    portamento_tracker_driver.cpp
    sostenuto_tracker_driver.cpp
    soft_pedal_tracker_driver.cpp
    legato_footswitch_tracker_driver.cpp
    hold_2_tracker_driver.cpp
    sound_controller_1_tracker_driver.cpp
    sound_controller_2_tracker_driver.cpp
    sound_controller_3_tracker_driver.cpp
    sound_controller_4_tracker_driver.cpp
    sound_controller_5_tracker_driver.cpp
    sound_controller_6_tracker_driver.cpp
    sound_controller_7_tracker_driver.cpp
    sound_controller_8_tracker_driver.cpp
    sound_controller_9_tracker_driver.cpp
    sound_controller_10_tracker_driver.cpp
    general_purpose_controller_1_tracker_driver.cpp
    general_purpose_controller_2_tracker_driver.cpp
    general_purpose_controller_3_tracker_driver.cpp
    general_purpose_controller_4_tracker_driver.cpp
    bank_select_tracker_driver.cpp
    modulation_wheel_tracker_driver.cpp
    breath_controller_tracker_driver.cpp
    foot_controller_tracker_driver.cpp
    portamento_time_tracker_driver.cpp
    data_entry_msb_tracker_driver.cpp
    channel_volume_tracker_driver.cpp
    balance_tracker_driver.cpp
    pan_tracker_driver.cpp
    expression_controller_tracker_driver.cpp
    effect_control_1_tracker_driver.cpp
    effect_control_2_tracker_driver.cpp
    general_purpose_controller_5_tracker_driver.cpp
    general_purpose_controller_6_tracker_driver.cpp
    general_purpose_controller_7_tracker_driver.cpp
    general_purpose_controller_8_tracker_driver.cpp
    tremolo_depth_tracker_driver.cpp
    chorus_depth_tracker_driver.cpp
    celeste_depth_tracker_driver.cpp
    phaser_depth_tracker_driver.cpp
    data_increment_tracker_driver.cpp
    data_decrement_tracker_driver.cpp
    non_registered_parameter_number_lsb_tracker_driver.cpp
    non_registered_parameter_number_msb_tracker_driver.cpp
    registered_parameter_number_lsb_tracker_driver.cpp
    registered_parameter_number_msb_tracker_driver.cpp
    all_sound_off_tracker_driver.cpp
    reset_all_controllers_tracker_driver.cpp
    local_control_tracker_driver.cpp
    all_notes_off_tracker_driver.cpp
    omni_mode_off_tracker_driver.cpp
    omni_mode_on_tracker_driver.cpp
    mono_mode_on_tracker_driver.cpp
    poly_mode_on_tracker_driver.cpp
)

add_library(s1u_drivers STATIC ${DRIVER_SOURCES})

target_link_libraries(s1u_drivers
    ${DRM_LIBRARIES}
    ${GBM_LIBRARIES}
    ${EGL_LIBRARIES}
    ${GLES2_LIBRARIES}
    ${INPUT_LIBRARIES}
    ${UDEV_LIBRARIES}
    ${CAIRO_LIBRARIES}
    ${PANGO_LIBRARIES}
    Threads::Threads
    dl
    m
    rt
    asound
    jack
    pulse
    pulse-simple
    sndfile
    samplerate
    fftw3
    opencv_core
    opencv_imgproc
    opencv_video
    opencv_videoio
    opencv_imgcodecs
    opencv_features2d
    opencv_calib3d
    opencv_objdetect
    opencv_ml
    opencv_flann
    opencv_photo
    opencv_stitching
    opencv_videostab
    opencv_highgui
    opencv_superres
    opencv_ts
    opencv_viz
    opencv_face
    opencv_text
    opencv_tracking
    opencv_xfeatures2d
    opencv_ximgproc
    opencv_xobjdetect
    opencv_aruco
    opencv_bgsegm
    opencv_bioinspired
    opencv_ccalib
    opencv_datasets
    opencv_dnn
    opencv_dnn_objdetect
    opencv_dpm
    opencv_face
    opencv_freetype
    opencv_fuzzy
    opencv_hdf
    opencv_hfs
    opencv_img_hash
    opencv_line_descriptor
    opencv_optflow
    opencv_phase_unwrapping
    opencv_plot
    opencv_reg
    opencv_rgbd
    opencv_saliency
    opencv_shape
    opencv_stereo
    opencv_structured_light
    opencv_surface_matching
    opencv_videostab
    opencv_xfeatures2d
    opencv_ximgproc
    opencv_xobjdetect
    opencv_aruco
    opencv_bgsegm
    opencv_bioinspired
    opencv_ccalib
    opencv_datasets
    opencv_dnn
    opencv_dnn_objdetect
    opencv_dpm
    opencv_face
    opencv_freetype
    opencv_fuzzy
    opencv_hdf
    opencv_hfs
    opencv_img_hash
    opencv_line_descriptor
    opencv_optflow
    opencv_phase_unwrapping
    opencv_plot
    opencv_reg
    opencv_rgbd
    opencv_saliency
    opencv_shape
    opencv_stereo
    opencv_structured_light
    opencv_surface_matching
    opencv_videostab
    opencv_xfeatures2d
    opencv_ximgproc
    opencv_xobjdetect
)

target_compile_options(s1u_drivers PRIVATE
    -O3
    -march=native
    -mtune=native
    -flto
    -fomit-frame-pointer
    -ffast-math
    -funroll-loops
    -fno-exceptions
    -fno-rtti
    -Wall
    -Wextra
    -Werror
)
